12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (IOMETER2 - 2006.mm.dd):
==================================

- Applied patches:
   - Patch by Ming Zhang to fix 2 memory leaks in ICFOpenDialog and ICFSaveDialog
     class.
   - Patch by Ming Zhang to exclude the disk if can not detect the disk size
     information under Linux.
   - Patch by Fabian Tillier to fix DDK path.
   - Patch by Christensen ReedX K to update iomtr_kstat module with newer
     2.6.x kernel.
   - Patch by Christensen ReedX K to use O_DIRECT as default for Linux.
   - Patch by Ming Zhang to use sysconf for processor count.
   - Patch by Ming Zhang to use unify method for version string.
   - Patch by Saner Pool to filter invalid commas, new line, and cariage
     return in .csv output.
   - By Ganderson, initialize iocq structure member for all platform.
   - By Rick Altherr, fixed the Mac OSX compile.
   - By Ming Zhang, fixed the Windows compile broken by MacOS port.
   - #1239881 : iometer-2004.07.30-post.DS1.Rick002OsXPortTry2.patch by
     Rick Altherr (Patch that implements the Mac OS X / PPC port).
   - #1186329 : iometer-2004.07.30-post.DS1.Rick001AioCancelTry2.patch by
     Rick Altherr (Patch that fixes an Completion Queue issue and ensures
     that all AIO requests are canceled if the Grunt has finished a test).
   - #1186314 : iometer-2004.07.30-post.DS1.Ming017CharDevicesForRaw.patch
     by Ming Zhang (Patch that adds support for char devices to support
     raw devices).
   - #1186307 : iometer-2004.07.30-post.DS1.Ming016KStatErrorMessage.patch
     by Ming Zhang (Tiny patch that cleans up an error message that is
     related to the kstat module one can optionally use on Linux).
   - #1186304 : iometer-2004.07.30-post.DS1.Ming015DebugDefine.patch by